2007-07-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm: Use cairopdf_rounded instead of wxt_rounded. The two
	terminals are independant.

2007-07-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_betweencurves fill_between): 
	Allow fill between curves to [sort of] work for polar coordinate plots.
	Not implemented: "above" "below" intersecting curves, self-closure.

2007-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):
	Accept a string variable as the file name for "fit via <viafile>".
	Bug #1755532

2007-07-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm: 
	* src/makefile.all:
	* src/term.h
	* configure.in:
	* src/Makefile.am:
	New pdf terminal based on cairo and pango. Shares most code with wxt.
	Currently named 'cairopdf'.

	* src/wxterminal/gp_cairo.c (gp_cairo_stroke): more dash patterns.

	Patch #1651015.

2007-07-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_sprintf) docs/gnuplot.doc:
	Remove limitation of 10 args max to internal function sprintf().
	Bug #1753756.

2007-07-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync Japanese documentation.

2007-07-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* doc/gnuplot.doc: Minor changes.

2007-07-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_histeps):  The initial move was not clipped to
	the canvas, which caused segfaults in the pdf terminal. Add a clipping
	test.  FIXME:  This entire routine should be rewritten to use
	draw_clip_line().

	* src/wxterminal.c (gp_cairo_draw_point):  Apply current linewidth to
	the line making up a point symbol.

2007-07-11  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: More cleanup.

2007-07-10  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add a section for 'rgbcolor variable'.

	* docs/gnuplot.doc: Move plot style descriptions up by one major level.
