@@ -1,3 +1,12 @@
+2007-07-21  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/wxt_gui.cpp:
+	* src/wxterminal/wxt_gui.h:
+	Nuke the event list and the associated mutex and state variables.
+	Instead, use a pipe to transmit events from the GUI thread to
+	term->waitforinput. select() is called without any timeout,
+	which is best way to use it.
+
 2007-07-20  Timothee Lecomte  <timothee.lecomte@ens.fr>
 
 	* term/cairo.trm: Use cairopdf_rounded instead of wxt_rounded. The two
